// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic messages are requeued if the function fails 1`] = `
Object {
  "root": Object {
    "children": Object {
      "my_queue": Object {
        "children": Object {
          "OnMessage-236ff3d72ad0ae46": Object {
            "inbound": Array [
              "root/my_queue",
            ],
            "props": Object {
              "environmentVariables": Object {
                "WING_SIM_RUNTIME_FUNCTION_PATH": "root/my_queue/OnMessage-236ff3d72ad0ae46",
              },
              "sourceCodeFile": "assets/OnMessage-236ff3d72ad0ae46/index.js",
              "sourceCodeLanguage": "javascript",
            },
            "type": "wingsdk.cloud.Function",
          },
        },
        "dependsOn": Array [
          "root/my_queue/OnMessage-236ff3d72ad0ae46",
        ],
        "outbound": Array [
          "root/my_queue/OnMessage-236ff3d72ad0ae46",
        ],
        "props": Object {
          "subscribers": Array [
            Object {
              "batchSize": 1,
              "functionHandle": "\${root/my_queue/OnMessage-236ff3d72ad0ae46#attrs.handle}",
            },
          ],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    },
    "type": "constructs.Construct",
  },
  "startOrder": Array [
    "root/my_queue/OnMessage-236ff3d72ad0ae46",
    "root/my_queue",
  ],
}
`;

exports[`basic queue with batch size of 5 1`] = `
Object {
  "root": Object {
    "children": Object {
      "my_queue": Object {
        "children": Object {
          "OnMessage-236ff3d72ad0ae46": Object {
            "inbound": Array [
              "root/my_queue",
            ],
            "props": Object {
              "environmentVariables": Object {
                "WING_SIM_RUNTIME_FUNCTION_PATH": "root/my_queue/OnMessage-236ff3d72ad0ae46",
              },
              "sourceCodeFile": "assets/OnMessage-236ff3d72ad0ae46/index.js",
              "sourceCodeLanguage": "javascript",
            },
            "type": "wingsdk.cloud.Function",
          },
        },
        "dependsOn": Array [
          "root/my_queue/OnMessage-236ff3d72ad0ae46",
        ],
        "outbound": Array [
          "root/my_queue/OnMessage-236ff3d72ad0ae46",
        ],
        "props": Object {
          "initialMessages": Array [
            "A",
            "B",
            "C",
            "D",
            "E",
            "F",
          ],
          "subscribers": Array [
            Object {
              "batchSize": 5,
              "functionHandle": "\${root/my_queue/OnMessage-236ff3d72ad0ae46#attrs.handle}",
            },
          ],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    },
    "type": "constructs.Construct",
  },
  "startOrder": Array [
    "root/my_queue/OnMessage-236ff3d72ad0ae46",
    "root/my_queue",
  ],
}
`;

exports[`basic queue with default batch size of 1 1`] = `
Object {
  "root": Object {
    "children": Object {
      "my_queue": Object {
        "children": Object {
          "OnMessage-236ff3d72ad0ae46": Object {
            "inbound": Array [
              "root/my_queue",
            ],
            "props": Object {
              "environmentVariables": Object {
                "WING_SIM_RUNTIME_FUNCTION_PATH": "root/my_queue/OnMessage-236ff3d72ad0ae46",
              },
              "sourceCodeFile": "assets/OnMessage-236ff3d72ad0ae46/index.js",
              "sourceCodeLanguage": "javascript",
            },
            "type": "wingsdk.cloud.Function",
          },
        },
        "dependsOn": Array [
          "root/my_queue/OnMessage-236ff3d72ad0ae46",
        ],
        "outbound": Array [
          "root/my_queue/OnMessage-236ff3d72ad0ae46",
        ],
        "props": Object {
          "subscribers": Array [
            Object {
              "batchSize": 1,
              "functionHandle": "\${root/my_queue/OnMessage-236ff3d72ad0ae46#attrs.handle}",
            },
          ],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    },
    "type": "constructs.Construct",
  },
  "startOrder": Array [
    "root/my_queue/OnMessage-236ff3d72ad0ae46",
    "root/my_queue",
  ],
}
`;
